--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,4 +9,5 @@ git+https://github.com/openai/whisper.git
 --extra-index-url https://download.pytorch.org/whl/cu113
 torch
 flask
+pychatgpt
 flask_cors
